--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,11 +13,12 @@
       "type": "image/svg+xml"
     },
     {
-      "src": "/favicon.png",
+      "src": "/favicon.ico",
       "sizes": "192x192",
       "type": "image/png"
     }
   ],
   "categories": ["business", "shopping", "entertainment"],
   "lang": "fr"
+
 }
